--- a/core/dslmcode/profiles/cle-7.x-2.x/modules/apps/cle_open_studio_app/apps/lrnapp-studio-submission/src/lrnapp-studio-submission/lrnapp-studio-submission-display.html
+++ b/core/dslmcode/profiles/cle-7.x-2.x/modules/apps/cle_open_studio_app/apps/lrnapp-studio-submission/src/lrnapp-studio-submission/lrnapp-studio-submission-display.html
@@ -1,6 +1,8 @@
 <link rel="import" href="../../../elements/moment-element/moment-element.html">
 <link rel="import" href="../../bower_components/img-pan-zoom/img-pan-zoom.html">
 <link rel="import" href="../../bower_components/marked-element/marked-element.html">
+<link rel="import" href="../../bower_components/image-inspector/image-inspector.html">
+
 <dom-module id="lrnapp-studio-submission-display">
   <template>
     <style>
@@ -174,27 +176,13 @@
             <lrndesign-contentblock class="center">
               <template is="dom-repeat" items="[[_toArray(submission.attributes.images)]]" as="image">
                 <lrnsys-dialog alt="View Image" body-append dynamic-images>
-
                   <div class="image-dialog-header">
-
-
-
                   </div>
-
                   <span slot="button">
                     <iron-image style="width:200px; height:200px; background-color: lightgray;" sizing="contain" class="contain" src="[[image.thumbnail]]" preload fade></iron-image>
                   </span>
                   <div style="width: 60%; margin:0 auto;">
-                    <app-toolbar>
-                      <lrnsys-button alt="Zoom in" icon="icons:zoom-in" on-tap="zoomIn"></lrnsys-button>
-                      <lrnsys-button alt="Zoom out" icon="icons:zoom-out" on-tap="zoomOut"></lrnsys-button>
-                      <lrnsys-button alt="Rotate right" icon="image:rotate-right" on-tap="rotateRight"></lrnsys-button>
-                      <lrnsys-button alt="Rotate left" icon="image:rotate-left" on-tap="rotateLeft"></lrnsys-button>
-                      <lrnsys-button alt="Mirror image" icon="image:flip" on-tap="mirrorImage"></lrnsys-button>
-                      <lrnsys-button alt="Open in new window" icon="icons:launch" href="[[image.url]]" target="_blank"></lrnsys-button>
-                      <lrnsys-button alt="Download all images" icon="icons:file-download" href="[[submission.attributes.download_files]]" target="_blank"></lrnsys-button>
-                    </app-toolbar>
-                    <img-pan-zoom id="img" src="[[image.url]]"></img-pan-zoom>
+                    <image-inspector src="[[image.url]]"></image-inspector>
                   </div>
         </div>
         </lrnsys-dialog>
